# user-interface

./: .gitignore  README.md  pyproject.toml  requirements.md
assets/: questions.md  questions2.md
tests/: test_user_interface.py
user_interface/: chat.py  data.pth  intents.json  intents2.json  nltk_utils.py  speech.py  train.py  user_interface.py
