[tool.poetry]
name = "user-interface"
version = "0.1.0"
description = ""
authors = ["Roman Sydoruk <sydoruk89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
SpeechRecognition = "^3.8.1"
pyaudio = "^0.2.11"
playsound = "^1.2.2"
gtts = "^2.1.1"
PyObjC = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
